syntax = "proto3";
package com.linkedout.proto.services;

import "models/job.proto";
import "models/jobCategory.proto";
import "models/jobOffer.proto";
import "models/company.proto";

// Get jobs
message GetJobsRequest {}

message GetJobsResponse {
  repeated models.Job jobs = 1;
}

// Get a job
message GetJobRequest {
  string id = 1;
}

message GetJobResponse {
  models.Job job = 1;
}

// Get multiple jobs
message GetMultipleJobsRequest {
  repeated string ids = 1;
}

message GetMultipleJobsResponse {
  repeated models.Job jobs = 1;
}

// Get job categories
message GetJobCategoriesRequest {}

message GetJobCategoriesResponse {
  repeated models.JobCategory categories = 1;
}

// Get a company
message GetCompanyRequest {
  string id = 1;
}

message GetCompanyResponse {
  models.Company company = 1;
}

// Get companies
message GetCompaniesRequest {}

message GetCompaniesResponse {
  repeated models.Company companies = 1;
}

// Get multiple companies
message GetMultipleCompaniesRequest {
  repeated string ids = 1;
}

message GetMultipleCompaniesResponse {
  repeated models.Company companies = 1;
}

// Ensure that a company exists
message EnsureCompanyRequest {
  string name = 1;
}

message EnsureCompanyResponse {
  models.Company company = 1;
}

// Get job offers for a user
message GetUserJobOffersRequest {
  string user_id = 1;
}

message GetUserJobOffersResponse {
  repeated models.JobOffer jobOffers = 1;
}

// Get a job offer for a user
message GetUserJobOfferRequest {
  string user_id = 1;
  string job_offer_id = 2;
}

message GetUserJobOfferResponse {
  models.JobOffer jobOffer = 1;
}

// Apply to a job offer for a user
message ApplyToJobOfferRequest {
  string user_id = 1;
  string job_offer_id = 2;
}

message ApplyToJobOfferResponse {}

// Get multiple job categories
message GetMultipleJobCategoriesRequest {
  repeated string ids = 1;
}

message GetMultipleJobCategoriesResponse {
  repeated models.JobCategory categories = 1;
}

// Get a job category
message GetJobCategoryRequest {
  string id = 1;
}

message GetJobCategoryResponse {
  models.JobCategory category = 1;
}
